# droniada-vid-stream

./: mkproto.sh  pyproject.toml
droniada_vid_stream/: client.py  server.py  video_streamer_pb2.py  video_streamer_pb2.pyi  video_streamer_pb2_grpc.py
protos/: video_streamer.proto
